PA3/cool.output
Terminals unused in grammar

   ERROR


State 10 conflicts: 2 shift/reduce
State 16 conflicts: 2 shift/reduce
State 130 conflicts: 9 shift/reduce
State 143 conflicts: 9 shift/reduce


Grammar

    0 $accept: program $end

    1 program: class_list

    2 class_list: class
    3           | class_list class

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'
    6      | error

    7 dummy_feature_list: /* empty */
    8                   | feature ';'
    9                   | dummy_feature_list feature ';'

   10 feature: OBJECTID '(' formals ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID ':' TYPEID ASSIGN expr
   12        | OBJECTID ':' TYPEID
   13        | error

   14 formals: /* empty */
   15        | formal dotformals

   16 dotformals: /* empty */
   17           | ',' formal dotformals

   18 formal: OBJECTID ':' TYPEID

   19 cases: case_ ';'
   20      | case_ ';' cases

   21 case_: OBJECTID ':' TYPEID DARROW expr

   22 letbinding: OBJECTID ':' TYPEID IN expr
   23           | OBJECTID ':' TYPEID ASSIGN expr IN expr
   24           | OBJECTID ':' TYPEID ',' letbinding
   25           | OBJECTID ':' TYPEID ASSIGN expr ',' letbinding
   26           | error letbinding

   27 expr: OBJECTID ASSIGN expr
   28     | expr '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr '.' OBJECTID '(' exprs ')'
   30     | OBJECTID '(' exprs ')'
   31     | IF expr THEN expr ELSE expr FI
   32     | WHILE expr LOOP expr POOL
   33     | '{' blockexprs '}'
   34     | CASE expr OF cases ESAC
   35     | LET letbinding
   36     | NEW TYPEID
   37     | ISVOID expr
   38     | expr '+' expr
   39     | expr '-' expr
   40     | expr '*' expr
   41     | expr '/' expr
   42     | '~' expr
   43     | expr '<' expr
   44     | expr LE expr
   45     | expr '=' expr
   46     | NOT expr
   47     | '(' expr ')'
   48     | OBJECTID
   49     | INT_CONST
   50     | STR_CONST
   51     | BOOL_CONST

   52 exprs: /* empty */
   53      | expr dotexprs

   54 dotexprs: /* empty */
   55         | ',' expr dotexprs

   56 blockexprs: expr ';'
   57           | expr ';' blockexprs
   58           | error ';' blockexprs


Terminals, with rules where they appear

$end (0) 0
'(' (40) 10 28 29 30 47
')' (41) 10 28 29 30 47
'*' (42) 40
'+' (43) 38
',' (44) 17 24 25 55
'-' (45) 39
'.' (46) 28 29
'/' (47) 41
':' (58) 10 11 12 18 21 22 23 24 25
';' (59) 4 5 8 9 19 20 56 57 58
'<' (60) 43
'=' (61) 45
'@' (64) 28
'{' (123) 4 5 10 33
'}' (125) 4 5 10 33
'~' (126) 42
error (256) 6 13 26 58
CLASS (258) 4 5
ELSE (259) 31
FI (260) 31
IF (261) 31
IN (262) 22 23
INHERITS (263) 5
LET (264) 35
LOOP (265) 32
POOL (266) 32
THEN (267) 31
WHILE (268) 32
CASE (269) 34
ESAC (270) 34
OF (271) 34
DARROW (272) 21
NEW (273) 36
ISVOID (274) 37
STR_CONST (275) 50
INT_CONST (276) 49
BOOL_CONST (277) 51
TYPEID (278) 4 5 10 11 12 18 21 22 23 24 25 28 36
OBJECTID (279) 10 11 12 18 21 22 23 24 25 27 28 29 30 48
ASSIGN (280) 11 23 25 27
NOT (281) 46
LE (282) 44
ERROR (283)


Nonterminals, with rules where they appear

$accept (45)
    on left: 0
program (46)
    on left: 1, on right: 0
class_list (47)
    on left: 2 3, on right: 1 3
class (48)
    on left: 4 5 6, on right: 2 3
dummy_feature_list (49)
    on left: 7 8 9, on right: 4 5 9
feature (50)
    on left: 10 11 12 13, on right: 8 9
formals (51)
    on left: 14 15, on right: 10
dotformals (52)
    on left: 16 17, on right: 15 17
formal (53)
    on left: 18, on right: 15 17
cases (54)
    on left: 19 20, on right: 20 34
case_ (55)
    on left: 21, on right: 19 20
letbinding (56)
    on left: 22 23 24 25 26, on right: 24 25 26 35
expr (57)
    on left: 27 28 29 30 31 32 33 34 35 36 37 38 39 40 41 42 43 44
    45 46 47 48 49 50 51, on right: 10 11 21 22 23 25 27 28 29 31 32
    34 37 38 39 40 41 42 43 44 45 46 47 53 55 56 57
exprs (58)
    on left: 52 53, on right: 28 29 30
dotexprs (59)
    on left: 54 55, on right: 53 55
blockexprs (60)
    on left: 56 57 58, on right: 33 57 58


state 0

    0 $accept: . program $end

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    program     go to state 3
    class_list  go to state 4
    class       go to state 5


state 1

    6 class: error .

    $default  reduce using rule 6 (class)


state 2

    4 class: CLASS . TYPEID '{' dummy_feature_list '}' ';'
    5      | CLASS . TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 6


state 3

    0 $accept: program . $end

    $end  shift, and go to state 7


state 4

    1 program: class_list .
    3 class_list: class_list . class

    error  shift, and go to state 1
    CLASS  shift, and go to state 2

    $end  reduce using rule 1 (program)

    class  go to state 8


state 5

    2 class_list: class .

    $default  reduce using rule 2 (class_list)


state 6

    4 class: CLASS TYPEID . '{' dummy_feature_list '}' ';'
    5      | CLASS TYPEID . INHERITS TYPEID '{' dummy_feature_list '}' ';'

    INHERITS  shift, and go to state 9
    '{'       shift, and go to state 10


state 7

    0 $accept: program $end .

    $default  accept


state 8

    3 class_list: class_list class .

    $default  reduce using rule 3 (class_list)


state 9

    5 class: CLASS TYPEID INHERITS . TYPEID '{' dummy_feature_list '}' ';'

    TYPEID  shift, and go to state 11


state 10

    4 class: CLASS TYPEID '{' . dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (dummy_feature_list)]
    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 14
    feature             go to state 15


state 11

    5 class: CLASS TYPEID INHERITS TYPEID . '{' dummy_feature_list '}' ';'

    '{'  shift, and go to state 16


state 12

   13 feature: error .

    $default  reduce using rule 13 (feature)


state 13

   10 feature: OBJECTID . '(' formals ')' ':' TYPEID '{' expr '}'
   11        | OBJECTID . ':' TYPEID ASSIGN expr
   12        | OBJECTID . ':' TYPEID

    '('  shift, and go to state 17
    ':'  shift, and go to state 18


state 14

    4 class: CLASS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 19

    feature  go to state 20


state 15

    8 dummy_feature_list: feature . ';'

    ';'  shift, and go to state 21


state 16

    5 class: CLASS TYPEID INHERITS TYPEID '{' . dummy_feature_list '}' ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13

    error     [reduce using rule 7 (dummy_feature_list)]
    OBJECTID  [reduce using rule 7 (dummy_feature_list)]
    '}'       reduce using rule 7 (dummy_feature_list)

    dummy_feature_list  go to state 22
    feature             go to state 15


state 17

   10 feature: OBJECTID '(' . formals ')' ':' TYPEID '{' expr '}'

    OBJECTID  shift, and go to state 23

    $default  reduce using rule 14 (formals)

    formals  go to state 24
    formal   go to state 25


state 18

   11 feature: OBJECTID ':' . TYPEID ASSIGN expr
   12        | OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 26


state 19

    4 class: CLASS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 27


state 20

    9 dummy_feature_list: dummy_feature_list feature . ';'

    ';'  shift, and go to state 28


state 21

    8 dummy_feature_list: feature ';' .

    $default  reduce using rule 8 (dummy_feature_list)


state 22

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list . '}' ';'
    9 dummy_feature_list: dummy_feature_list . feature ';'

    error     shift, and go to state 12
    OBJECTID  shift, and go to state 13
    '}'       shift, and go to state 29

    feature  go to state 20


state 23

   18 formal: OBJECTID . ':' TYPEID

    ':'  shift, and go to state 30


state 24

   10 feature: OBJECTID '(' formals . ')' ':' TYPEID '{' expr '}'

    ')'  shift, and go to state 31


state 25

   15 formals: formal . dotformals

    ','  shift, and go to state 32

    $default  reduce using rule 16 (dotformals)

    dotformals  go to state 33


state 26

   11 feature: OBJECTID ':' TYPEID . ASSIGN expr
   12        | OBJECTID ':' TYPEID .

    ASSIGN  shift, and go to state 34

    $default  reduce using rule 12 (feature)


state 27

    4 class: CLASS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 4 (class)


state 28

    9 dummy_feature_list: dummy_feature_list feature ';' .

    $default  reduce using rule 9 (dummy_feature_list)


state 29

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' . ';'

    ';'  shift, and go to state 35


state 30

   18 formal: OBJECTID ':' . TYPEID

    TYPEID  shift, and go to state 36


state 31

   10 feature: OBJECTID '(' formals ')' . ':' TYPEID '{' expr '}'

    ':'  shift, and go to state 37


state 32

   17 dotformals: ',' . formal dotformals

    OBJECTID  shift, and go to state 23

    formal  go to state 38


state 33

   15 formals: formal dotformals .

    $default  reduce using rule 15 (formals)


state 34

   11 feature: OBJECTID ':' TYPEID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 53


state 35

    5 class: CLASS TYPEID INHERITS TYPEID '{' dummy_feature_list '}' ';' .

    $default  reduce using rule 5 (class)


state 36

   18 formal: OBJECTID ':' TYPEID .

    $default  reduce using rule 18 (formal)


state 37

   10 feature: OBJECTID '(' formals ')' ':' . TYPEID '{' expr '}'

    TYPEID  shift, and go to state 54


state 38

   17 dotformals: ',' formal . dotformals

    ','  shift, and go to state 32

    $default  reduce using rule 16 (dotformals)

    dotformals  go to state 55


state 39

   31 expr: IF . expr THEN expr ELSE expr FI

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 56


state 40

   35 expr: LET . letbinding

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    letbinding  go to state 59


state 41

   32 expr: WHILE . expr LOOP expr POOL

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 60


state 42

   34 expr: CASE . expr OF cases ESAC

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 61


state 43

   36 expr: NEW . TYPEID

    TYPEID  shift, and go to state 62


state 44

   37 expr: ISVOID . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 63


state 45

   50 expr: STR_CONST .

    $default  reduce using rule 50 (expr)


state 46

   49 expr: INT_CONST .

    $default  reduce using rule 49 (expr)


state 47

   51 expr: BOOL_CONST .

    $default  reduce using rule 51 (expr)


state 48

   27 expr: OBJECTID . ASSIGN expr
   30     | OBJECTID . '(' exprs ')'
   48     | OBJECTID .

    ASSIGN  shift, and go to state 64
    '('     shift, and go to state 65

    $default  reduce using rule 48 (expr)


state 49

   46 expr: NOT . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 66


state 50

   42 expr: '~' . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 67


state 51

   33 expr: '{' . blockexprs '}'

    error       shift, and go to state 68
    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr        go to state 69
    blockexprs  go to state 70


state 52

   47 expr: '(' . expr ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 71


state 53

   11 feature: OBJECTID ':' TYPEID ASSIGN expr .
   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 11 (feature)


state 54

   10 feature: OBJECTID '(' formals ')' ':' TYPEID . '{' expr '}'

    '{'  shift, and go to state 81


state 55

   17 dotformals: ',' formal dotformals .

    $default  reduce using rule 17 (dotformals)


state 56

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   31     | IF expr . THEN expr ELSE expr FI
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    THEN  shift, and go to state 82
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 57

   26 letbinding: error . letbinding

    error     shift, and go to state 57
    OBJECTID  shift, and go to state 58

    letbinding  go to state 83


state 58

   22 letbinding: OBJECTID . ':' TYPEID IN expr
   23           | OBJECTID . ':' TYPEID ASSIGN expr IN expr
   24           | OBJECTID . ':' TYPEID ',' letbinding
   25           | OBJECTID . ':' TYPEID ASSIGN expr ',' letbinding

    ':'  shift, and go to state 84


state 59

   35 expr: LET letbinding .

    $default  reduce using rule 35 (expr)


state 60

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   32     | WHILE expr . LOOP expr POOL
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    LOOP  shift, and go to state 85
    LE    shift, and go to state 72
    '<'   shift, and go to state 73
    '='   shift, and go to state 74
    '+'   shift, and go to state 75
    '-'   shift, and go to state 76
    '*'   shift, and go to state 77
    '/'   shift, and go to state 78
    '@'   shift, and go to state 79
    '.'   shift, and go to state 80


state 61

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   34     | CASE expr . OF cases ESAC
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    OF   shift, and go to state 86
    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80


state 62

   36 expr: NEW TYPEID .

    $default  reduce using rule 36 (expr)


state 63

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   37     | ISVOID expr .
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr

    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 37 (expr)


state 64

   27 expr: OBJECTID ASSIGN . expr

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    expr  go to state 87


state 65

   30 expr: OBJECTID '(' . exprs ')'

    IF          shift, and go to state 39
    LET         shift, and go to state 40
    WHILE       shift, and go to state 41
    CASE        shift, and go to state 42
    NEW         shift, and go to state 43
    ISVOID      shift, and go to state 44
    STR_CONST   shift, and go to state 45
    INT_CONST   shift, and go to state 46
    BOOL_CONST  shift, and go to state 47
    OBJECTID    shift, and go to state 48
    NOT         shift, and go to state 49
    '~'         shift, and go to state 50
    '{'         shift, and go to state 51
    '('         shift, and go to state 52

    $default  reduce using rule 52 (exprs)

    expr   go to state 88
    exprs  go to state 89


state 66

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr
   46     | NOT expr .

    LE   shift, and go to state 72
    '<'  shift, and go to state 73
    '='  shift, and go to state 74
    '+'  shift, and go to state 75
    '-'  shift, and go to state 76
    '*'  shift, and go to state 77
    '/'  shift, and go to state 78
    '@'  shift, and go to state 79
    '.'  shift, and go to state 80

    $default  reduce using rule 46 (expr)


state 67

   28 expr: expr . '@' TYPEID '.' OBJECTID '(' exprs ')'
   29     | expr . '.' OBJECTID '(' exprs ')'
   38     | expr . '+' expr
   39     | expr . '-' expr
   40     | expr . '*' expr
   41     | expr . '/' expr
   42     | '~' expr .
   43     | expr . '<' expr
   44     | expr . LE expr
   45     | expr . '=' expr
